# snow-utils

./: .env.example  .gitignore  CITATION.cff  LICENSE  NOTICE  README.md  THIRD_PARTY_LICENSES.csv  THIRD_PARTY_LICENSES.md  Taskfile.yml  extvolume.py  network.py  network_presets.py  pat.py  pyproject.toml  role.sql  snow-utils  sync-skills.sh
.task/checksum/: setup
common/: pyproject.toml
common/src/snow_utils_common/: __init__.py  check_setup.py  network_presets.py  snow-utils-setup.sql  snow_common.py
scripts/: extvolume.py  network.py  pat.py
src/snow_utils/: __init__.py  extvolume.py  network.py  pat.py
