[project]
name = "snow-utils"
version = "0.1.0"
description = "Snowflake utility tools for PAT management, network rules, and external volumes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    "click>=8.0",
    "python-dotenv>=1.2.1",
    "requests>=2.28",
    "snow-utils-common",
]

[project.scripts]
snow-utils-networks = "snow_utils.network:cli"
snow-utils-pat = "snow_utils.pat:cli"
snow-utils-volumes = "snow_utils.extvolume:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snow_utils"]

[tool.uv.sources]
snow-utils-common = { path = "common", editable = true }

[tool.uv]
dev-dependencies = [
    "duckdb>=1.4.2",
    "ipykernel>=7.1.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
